--- a/style.css
+++ b/style.css
@@ -1,22 +1,35 @@
 h1{
   font-family: futura;
-  font-size: 40px;
-  text-align: center
+  font-size: 80px;
+  text-align: center;
+  color: #FFFFFF
 }
 
 p{
-  font-family: arial
+  font-family: baskerville;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-right: 200px;
+  margin-left: 200px;
+}
+
+body {
+  color: white;
 }
 
 h2{
   font-family: futura;
-  text-align: center
+  text-align: center;
+  margin-top: 70px;
+  color: #92DFF3;
+  font-size: 30px
 }
 
 img{
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px;
+  padding: 10px;
   width: 500px;
 }
 
@@ -27,7 +40,18 @@ img{
   width: 50%;
 }
 
-hr.dashed {
-  border-top: 3px dashed #ddd;
+
+body {
+  background-color: #0D5EAF;
+}
+
+
+.footer {
+    background-color: #92DFF3;
+    padding-top: 2px;
+    padding-bottom: 2px;
+  text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
