--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
   font-family: futura;
   font-size: 80px;
   text-align: center;
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 p{
@@ -23,7 +23,7 @@ h2{
   text-align: center;
   margin-top: 70px;
   color: #92DFF3;
-  font-size: 30px
+  font-size: 30px;
 }
 
 img{
